Completed Data Cleaning section

--- a/MLDP_Project_Ethan.ipynb
+++ b/MLDP_Project_Ethan.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "a85eed7a",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "fb3ac6aa",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "4a2591ba",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
        "[25976 rows x 25 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "cee2e367",
    "metadata": {},
    "outputs": [
@@ -929,7 +929,7 @@
        "[25976 rows x 23 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "2f52a2db",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "ff9eb4eb",
    "metadata": {},
    "outputs": [
@@ -1042,7 +1042,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "edd16fa5",
    "metadata": {},
    "outputs": [
@@ -1334,7 +1334,7 @@
        "max                    1128.00000               1115.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1346,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "de5f5189",
    "metadata": {},
    "outputs": [
@@ -1429,7 +1429,7 @@
        "freq                      14573  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "da4a4b9d",
    "metadata": {},
    "outputs": [
@@ -1531,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "97aba5af",
    "metadata": {},
    "outputs": [
@@ -1572,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "a8fe360a",
    "metadata": {},
    "outputs": [
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "id": "c0a8e327",
    "metadata": {},
    "outputs": [
@@ -1702,7 +1702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "id": "609e293b",
    "metadata": {},
    "outputs": [
@@ -1767,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "id": "82056dde",
    "metadata": {},
    "outputs": [
@@ -1823,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "id": "d8b16458",
    "metadata": {},
    "outputs": [
@@ -1873,12 +1873,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "624ee490",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n"
+    "# \n"
    ]
   },
   {
@@ -1899,57 +1899,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "id": "c34bdfb6",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'Column'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32m/opt/anaconda3/envs/mldp/lib/python3.13/site-packages/pandas/core/indexes/base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[31mKeyError\u001b[39m: 'Column'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Check for typos and duplicate values within the dataset\u001b[39;00m\n\u001b[32m      3\u001b[39m df.duplicated().sum() \u001b[38;5;66;03m# To check for duplicate rows\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mColumn\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m.unique() \u001b[38;5;66;03m# To check for typos\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/opt/anaconda3/envs/mldp/lib/python3.13/site-packages/pandas/core/frame.py:4113\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4111\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4112\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4113\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4114\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4115\u001b[39m     indexer = [indexer]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m/opt/anaconda3/envs/mldp/lib/python3.13/site-packages/pandas/core/indexes/base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
-      "\u001b[31mKeyError\u001b[39m: 'Column'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Check for typos and duplicate values within the dataset\n",
-    "\n",
-    "df.duplicated().sum() # To check for duplicate rows\n",
-    "\n",
-    "df['Column'].unique() # To check for typos"
+    "# Mapping the target variable\n",
+    "conversion_rules = {'neutral or dissatisfied': 0,  'satisfied': 1}\n",
+    "df['satisfaction'] = df['satisfaction'].map(conversion_rules)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1589e28e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imputing missing values\n",
+    "\n",
+    "# Separate feature columns from target\n",
+    "feature_df = df.drop(columns=[\"satisfaction\"])\n",
+    "\n",
+    "num_cols = feature_df.select_dtypes(include=[\"number\"]).columns\n",
+    "cat_cols = feature_df.select_dtypes(exclude=[\"number\"]).columns\n",
+    "\n",
+    "# Numeric: fill with median\n",
+    "for col in num_cols:\n",
+    "    df[col] = df[col].fillna(df[col].median())\n",
+    "\n",
+    "# Categorical: fill with most frequent (mode)\n",
+    "for col in cat_cols:\n",
+    "    df[col] = df[col].fillna(df[col].mode()[0])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "id": "bd8384d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Cleaning\n"
+    "# One Hot Encoding categorical columns\n",
+    "\n",
+    "categorical_cols = ['Gender', 'Customer Type', 'Type of Travel', 'Class']\n",
+    "df = pd.get_dummies(df, columns=categorical_cols, drop_first=True)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17eb2a11",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1961,15 +1957,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "3823a1ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Features Shape: (20780, 23)\n",
+      "Training Labels Shape: (20780,)\n"
+     ]
+    }
+   ],
    "source": [
     "## Split data into train set and test set\n",
-    "#from sklearn.model_selection import train_test_split\n",
-    "#X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    #train_test_split(X,y,test_size=0.2,random_state=42))"
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# 1. update X and y from the NEW encoded dataframe\n",
+    "X = df.drop('satisfaction', axis=1)\n",
+    "y = df['satisfaction']\n",
+    "\n",
+    "# 2. split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# 3. checking the shape\n",
+    "print(\"Training Features Shape:\", X_train.shape)\n",
+    "print(\"Training Labels Shape:\", y_train.shape)\n"
    ]
   },
   {
@@ -1990,12 +2004,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "b009f763",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baseline model trained\n"
+     ]
+    }
+   ],
    "source": [
-    "## Initialise and train model\n"
+    "## Initialise and train model\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# Baseline: Logistic Regression\n",
+    "baseline_model = LogisticRegression(max_iter=5000)\n",
+    "baseline_model.fit(X_train, y_train)\n",
+    "\n",
+    "print(\"Baseline model trained\")\n"
    ]
   },
   {
@@ -2008,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "b1938206",
    "metadata": {},
    "outputs": [],
@@ -2018,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "4b1f6ebe",
    "metadata": {},
    "outputs": [],
@@ -2038,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "5dff3776",
    "metadata": {},
    "outputs": [],
@@ -2048,11 +2077,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "e5a17bae",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imputed 0s in Inflight wifi service with median: 3.0\n",
+      "Imputed 0s in Departure/Arrival time convenient with median: 3.0\n",
+      "Imputed 0s in Ease of Online booking with median: 3.0\n",
+      "Imputed 0s in Gate location with median: 3.0\n",
+      "Imputed 0s in Food and drink with median: 3.0\n",
+      "Imputed 0s in Online boarding with median: 4.0\n",
+      "Imputed 0s in Seat comfort with median: 4.0\n",
+      "Imputed 0s in Inflight entertainment with median: 4.0\n",
+      "Imputed 0s in On-board service with median: 4.0\n",
+      "Imputed 0s in Leg room service with median: 4.0\n",
+      "Imputed 0s in Baggage handling with median: 4.0\n",
+      "Imputed 0s in Checkin service with median: 3.0\n",
+      "Imputed 0s in Inflight service with median: 4.0\n",
+      "Imputed 0s in Cleanliness with median: 3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Imputing median values into columns with 0\n",
+    "# We replace 0 with the median of that column to maintain distribution neutrality.\n",
+    "\n",
+    "# List of columns that use the 1-5 rating scale\n",
+    "survey_columns = [\n",
+    "    'Inflight wifi service',\n",
+    "    'Departure/Arrival time convenient',\n",
+    "    'Ease of Online booking',\n",
+    "    'Gate location',\n",
+    "    'Food and drink',\n",
+    "    'Online boarding',\n",
+    "    'Seat comfort',\n",
+    "    'Inflight entertainment',\n",
+    "    'On-board service',\n",
+    "    'Leg room service',\n",
+    "    'Baggage handling',\n",
+    "    'Checkin service',\n",
+    "    'Inflight service',\n",
+    "    'Cleanliness'\n",
+    "]\n",
+    "\n",
+    "# Loop through each column and replace 0 with the median\n",
+    "for col in survey_columns:\n",
+    "    median_val = df[col].median()\n",
+    "    df[col] = df[col].replace(0, median_val)\n",
+    "    # Optional: Print to confirm changes\n",
+    "    print(f\"Imputed 0s in {col} with median: {median_val}\")"
+   ]
   }
  ],
  "metadata": {
