Implemented some further feature engineering features

--- a/MLDP_Project_Ethan.ipynb
+++ b/MLDP_Project_Ethan.ipynb
@@ -5641,8 +5641,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "id": "672c82e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Second Feature Engineering -- Outlier Removal using IQR method\n",
+    "\n",
+    "# Create a copy so nothing above changes\n",
+    "df_out = df.copy()\n",
+    "\n",
+    "# Choose continuous numeric columns only\n",
+    "continuous_cols = [\n",
+    "    \"Flight Distance\",\n",
+    "    \"Departure Delay in Minutes\",\n",
+    "    \"Arrival Delay in Minutes\"\n",
+    "]\n",
+    "\n",
+    "# IQR-based outlier removal\n",
+    "for col in continuous_cols:\n",
+    "    Q1 = df_out[col].quantile(0.25)\n",
+    "    Q3 = df_out[col].quantile(0.75)\n",
+    "    IQR = Q3 - Q1\n",
+    "    lower = Q1 - 1.5 * IQR\n",
+    "    upper = Q3 + 1.5 * IQR\n",
+    "    df_out = df_out[(df_out[col] >= lower) & (df_out[col] <= upper)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "43506907",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build new feature set from outlier-removed data\n",
+    "X_out = df_out.drop(\"satisfaction\", axis=1)\n",
+    "y_out = df_out[\"satisfaction\"]\n",
+    "\n",
+    "# train/test split for this outlier version\n",
+    "X_train_out, X_test_out, y_train_out, y_test_out = train_test_split(\n",
+    "    X_out, y_out, test_size=0.2, random_state=42\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "ea29551c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LR (Outlier-Removed) Accuracy: 0.8853\n",
+      "GB (Outlier-Removed) Accuracy: 0.9290\n",
+      "RF (Outlier-Removed) Accuracy: 0.9391\n",
+      "DT (Outlier-Removed) Accuracy: 0.9155\n",
+      "\n",
+      "LR (Outlier-Removed) Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.90      0.89      0.89      2021\n",
+      "           1       0.87      0.88      0.88      1754\n",
+      "\n",
+      "    accuracy                           0.89      3775\n",
+      "   macro avg       0.88      0.88      0.88      3775\n",
+      "weighted avg       0.89      0.89      0.89      3775\n",
+      "\n",
+      "LR (Outlier-Removed) Confusion Matrix:\n",
+      "[[1798  223]\n",
+      " [ 210 1544]]\n",
+      "\n",
+      "GB (Outlier-Removed) Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.92      0.95      0.93      2021\n",
+      "           1       0.94      0.91      0.92      1754\n",
+      "\n",
+      "    accuracy                           0.93      3775\n",
+      "   macro avg       0.93      0.93      0.93      3775\n",
+      "weighted avg       0.93      0.93      0.93      3775\n",
+      "\n",
+      "GB (Outlier-Removed) Confusion Matrix:\n",
+      "[[1916  105]\n",
+      " [ 163 1591]]\n",
+      "\n",
+      "RF (Outlier-Removed) Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.93      0.96      0.94      2021\n",
+      "           1       0.95      0.92      0.93      1754\n",
+      "\n",
+      "    accuracy                           0.94      3775\n",
+      "   macro avg       0.94      0.94      0.94      3775\n",
+      "weighted avg       0.94      0.94      0.94      3775\n",
+      "\n",
+      "RF (Outlier-Removed) Confusion Matrix:\n",
+      "[[1935   86]\n",
+      " [ 144 1610]]\n",
+      "\n",
+      "DT (Outlier-Removed) Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.93      0.92      0.92      2021\n",
+      "           1       0.90      0.91      0.91      1754\n",
+      "\n",
+      "    accuracy                           0.92      3775\n",
+      "   macro avg       0.91      0.92      0.92      3775\n",
+      "weighted avg       0.92      0.92      0.92      3775\n",
+      "\n",
+      "DT (Outlier-Removed) Confusion Matrix:\n",
+      "[[1852  169]\n",
+      " [ 150 1604]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train new models on the outlier-removed data\n",
+    "gbt_out = GradientBoostingClassifier(random_state=42)\n",
+    "rf_out  = RandomForestClassifier(random_state=42)\n",
+    "dt_out  = DecisionTreeClassifier(random_state=42)\n",
+    "lr_out  = LogisticRegression(max_iter=5000)\n",
+    "\n",
+    "gbt_out.fit(X_train_out, y_train_out)\n",
+    "rf_out.fit(X_train_out, y_train_out)\n",
+    "dt_out.fit(X_train_out, y_train_out)\n",
+    "lr_out.fit(X_train_out, y_train_out)\n",
+    "\n",
+    "models_out = {\n",
+    "    \"LR (Outlier-Removed)\": lr_out,\n",
+    "    \"GB (Outlier-Removed)\": gbt_out,\n",
+    "    \"RF (Outlier-Removed)\": rf_out,\n",
+    "    \"DT (Outlier-Removed)\": dt_out\n",
+    "}\n",
+    "\n",
+    "# Accuracy\n",
+    "for name, model in models_out.items():\n",
+    "    y_pred_out = model.predict(X_test_out)\n",
+    "    print(f\"{name} Accuracy: {accuracy_score(y_test_out, y_pred_out):.4f}\")\n",
+    "\n",
+    "# Classification report + confusion matrix\n",
+    "for name, model in models_out.items():\n",
+    "    y_pred_out = model.predict(X_test_out)\n",
+    "    print(f\"\\n{name} Classification Report:\")\n",
+    "    print(classification_report(y_test_out, y_pred_out))\n",
+    "    print(f\"{name} Confusion Matrix:\")\n",
+    "    print(confusion_matrix(y_test_out, y_pred_out))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d2289c6",
+   "metadata": {},
+   "source": [
+    "After seeing the results of my outlier removal feature engineering, I noticed that actually even after deleting the outliers from some of the features that we found during the EDA section. Instead of improving our evaluation scores, it actually caused my gradient boosting's model to drop in it's accuracy score, classification report, and the confusion matrix.\n",
+    "\n",
+    "For the accuracy score, the original untuned Gradient Boosting (The model that I chose) score was 0.938, meanwhile now it is at 0.929. Which is nearly a 0.10 drop in the accuracy score. \n",
+    "\n",
+    "As for the classification report, the false values in the original untuned Gradient Boosting model from the Model Evaluation section had an accuracy score that was 0.10 higher (0.94 vs 0.93) and a precision + F1 score that was 0.20 higher than the new model with the outliers dropped (0.94 to 0.92 for precision and 0.95 to 0.93). The only thing that remained the same was the recall. However, when we look at the true portion, we can actually see that the recall and the f1-score both decreased by 0.10 in the newer model without the outlier data, when compared to the original one.\n",
+    "\n",
+    "Lastly, when we look at the confusion matrix, we will actually start to notice that the total error rates is higher on the model with the outlier-removed values. This was calculated using the FP+FN/Total formula. When you calculate all of them, you would realise that the outlier removed values would be 268/3775 = 7.10% (3775 since we removed outliers) vs 321/5196 = 6.18% (the original boosting model).\n",
+    "\n",
+    "With all these observations in mind, I realised that there was absolutely no reason for me to drop the outliers as it would only make my evaluation scores worse, especially for my Gradient Boosting model. This has also helped me to understand that these outliers actually have a purpose, and can be more useful if left within the dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb9934db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4493efd",
    "metadata": {},
    "outputs": [],
    "source": []
