Commented on my code

--- a/MLDP_Project_Ethan.ipynb
+++ b/MLDP_Project_Ethan.ipynb
@@ -1589,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "a8fe360a",
    "metadata": {},
    "outputs": [
@@ -1616,7 +1616,7 @@
     " ]\n",
     "\n",
     "fig, axes = plt.subplots(4, 4, figsize=(14, 14))\n",
-    "axes = axes.flatten() # making sure that the axes are not in 2D array so\n",
+    "axes = axes.flatten() # making sure that the axes are not in 2D array\n",
     "\n",
     "# Loop through each rating column and plot\n",
     "for i, col in enumerate(rating_cols):\n",
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "c0a8e327",
    "metadata": {},
    "outputs": [
@@ -1667,21 +1667,20 @@
    "source": [
     "# Understanding distribution of features (Numerical Features)\n",
     "\n",
-    "# 1. Filter features: Keep only numerical columns with more than 10 unique values\n",
-    "# This automatically removes the 1-5 rating scales\n",
+    "# automatically removes the 1-5 rating scales by filtering for continuous numerical features only\n",
     "continuous_features = [\n",
     "    col for col in df.select_dtypes(include=[\"number\"]).columns \n",
     "    if df[col].nunique() > 10\n",
     "]\n",
     "\n",
-    "# 2. Setup the plotting grid based on the filtered list\n",
+    "# Setup the plotting grid based on the filtered list\n",
     "cols = 2  # Reduced columns for better visibility of wider distributions\n",
     "rows = (len(continuous_features) + cols - 1) // cols\n",
     "fig, axes = plt.subplots(rows, cols, figsize=(15, 5 * rows))\n",
     "axes = axes.flatten()\n",
     "\n",
     "for idx, feature in enumerate(continuous_features):\n",
-    "    # Drop NaNs for the calculation\n",
+    "    # Drop missing values for the calculation\n",
     "    data = df[feature].dropna()\n",
     "    \n",
     "    # Plot histogram\n",
@@ -1801,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "82056dde",
    "metadata": {},
    "outputs": [
@@ -1818,31 +1817,26 @@
    ],
    "source": [
     "## Understanding relationship between variables (Heatmap)\n",
-    "# Correlation heatmap (sorted by relevance to target) - Pearson\n",
     "\n",
-    "# 1. Create a temporary copy for visualization to protect the original data\n",
+    "# 1. create a temporary copy for visualization to protect the original data\n",
     "df_viz = df.copy()\n",
     "\n",
-    "# 2. Encode the target variable 'satisfaction'\n",
-    "# We map 'satisfied' to 1 and 'neutral or dissatisfied' to 0\n",
+    "# 2. encode the target variable 'satisfaction'\n",
     "df_viz['satisfaction'] = df_viz['satisfaction'].map({'satisfied': 1, 'neutral or dissatisfied': 0})\n",
     "\n",
-    "# 3. Drop redundant columns\n",
-    "# 'Departure Delay' is usually 99% correlated with 'Arrival Delay'. We only need one.\n",
-    "# We also drop the remaining categorical columns (Gender, etc.) as they don't work in a standard correlation heatmap\n",
+    "# drop redundant columns\n",
+    "#  also drop the remaining categorical columns (Gender, etc.) as they don't work in a standard correlation heatmap\n",
     "df_viz = df_viz.drop(columns=['Departure Delay in Minutes'])\n",
     "numeric_df = df_viz.select_dtypes(include=['number'])\n",
     "\n",
-    "# 4. Calculate Correlation\n",
+    "# calculate correlation\n",
     "corr_matrix = numeric_df.corr()\n",
     "\n",
-    "# 5. SORTING (The crucial step for \"Relevance\")\n",
-    "# This sorts the matrix columns/rows by their correlation with 'satisfaction'\n",
-    "# so the most important features are grouped together at the top/left.\n",
+    "# sorting (the crucial step for \"relevance\")\n",
     "cols_sorted = corr_matrix.nlargest(len(numeric_df.columns), 'satisfaction')['satisfaction'].index\n",
     "sorted_corr = numeric_df[cols_sorted].corr()\n",
     "\n",
-    "# 6. Plot the Heatmap\n",
+    "# plot the heatmap\n",
     "plt.figure(figsize=(14, 12))\n",
     "sns.heatmap(sorted_corr, \n",
     "            annot=True, \n",
